# token-usage-minimax-

./: LICENSE  README.md
minimax usage/: Cargo.toml  LICENSE  README.md  build.ps1  run-console.ps1
minimax usage/assets/: settings.ps1
minimax usage/installer/: token_usage.iss
minimax usage/src/: config.rs  main.rs  notify.rs  providers.rs  settings.rs  settings_window.rs  tray.rs
